# cpp-raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  color.h  custom_math.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  vec3.h
src/: main.cpp
